install Argos CI ?

--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "author": "sebastienlorber <lorber.sebastien@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@playwright/test": "^1.29.2",
+    "@playwright/test": "^1.30.0",
     "prettier": "^2.8.3"
   },
   "scripts": {
     "test": "playwright test",
     "test:pr": "SITE_URL='https://deploy-preview-8288--docusaurus-2.netlify.app' playwright test",
     "report": "playwright show-report"
+  },
+  "dependencies": {
+    "@argos-ci/cli": "^0.4.4",
+    "@argos-ci/playwright": "^0.0.1"
   }
 }
