install Argos CI ?

--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "repository": "git@github.com:slorber/docusaurus-visual-tests.git",
   "author": "sebastienlorber <lorber.sebastien@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "@playwright/test": "^1.30.0",
-    "prettier": "^2.8.3"
-  },
   "scripts": {
     "test": "playwright test",
     "test:pr": "SITE_URL='https://deploy-preview-8288--docusaurus-2.netlify.app' playwright test",
@@ -16,6 +12,8 @@
   },
   "dependencies": {
     "@argos-ci/cli": "^0.4.4",
-    "@argos-ci/playwright": "^0.0.1"
+    "@argos-ci/playwright": "^0.0.1",
+    "@playwright/test": "^1.30.0",
+    "prettier": "^2.8.3"
   }
 }
