--- a/.github/workflows/argos.yml
+++ b/.github/workflows/argos.yml
@@ -25,12 +25,8 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      # -----
-      # Insert here your steps required to take screenshots of
-      # your components or of your application.
-      #
-      # Find integrations on https://argos-ci.com/docs
-      # -----
+      - name: Tests / Screenshots
+        run: yarn test
 
       - name: Upload screenshots to argos-ci.com
         continue-on-error: true
