--- a/.github/workflows/argos.yml
+++ b/.github/workflows/argos.yml
@@ -23,7 +23,10 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
 
       - name: Tests / Screenshots
         run: yarn test
