--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "scripts": {
     "test": "playwright test",
     "test:pr": "SITE_URL='https://deploy-preview-8288--docusaurus-2.netlify.app' playwright test",
-    "report": "playwright show-report"
+    "report": "playwright show-report",
+     "postinstall": "patch-package"
   },
   "dependencies": {
     "@argos-ci/cli": "^0.4.4",
     "@argos-ci/playwright": "^0.0.3",
     "@playwright/test": "^1.30.0",
+    "patch-package": "^6.5.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.3"
   }
 }
